--- a/infra/Vagrantfile
+++ b/infra/Vagrantfile
@@ -2,7 +2,7 @@
 # vi: set ft=ruby :
 
 Vagrant.configure(2) do |config|
-  config.vm.box = "minimal/xenial64"
+  config.vm.box = "centos/7"
   config.vm.synced_folder "../", "/opt/kafka_workshop", :nfs => { :mount_options => ["dmode=777","fmode=777"] }
 
   config.vm.network "forwarded_port", guest: 2181, host: 2181
