--- a/infra/provision.yml
+++ b/infra/provision.yml
@@ -3,6 +3,18 @@
   hosts: kafka-nodes
   vars_files:
     - vars.yml
+
+  pre_tasks:
+    - name: Install Required Packages
+      become: true
+      become_method: sudo
+      yum:
+        update_cache: true
+        pkg: "{{ item }}"
+        state: present
+      with_items:
+        - vim
+
   tasks:
     - name: "Add a maximum nodes to the zookeeper-nodes group"
       add_host:
