--- a/kafka-clients/build.gradle
+++ b/kafka-clients/build.gradle
@@ -1,13 +1,17 @@
 apply plugin: 'java'
+
 apply plugin: 'application'
 
 repositories {
     mavenCentral()
-
+    jcenter()
 }
+
 dependencies {
     compile 'org.apache.kafka:kafka-clients:1.0.0'
     compile 'ch.qos.logback:logback-classic:1.2.2'
+    testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
-mainClassName = 'producer.ProducerClient'
+mainClassName = 'KafkaClientMain'
+
