--- a/kafka-streams/build.gradle
+++ b/kafka-streams/build.gradle
@@ -3,13 +3,13 @@ apply plugin: 'application'
 
 repositories {
     mavenCentral()
-
 }
 
 dependencies {
-    compile group: 'org.apache.kafka', 'kafka-clients','1.0.0'
-    compile group: 'org.apache.kafka', name: 'kafka-streams', version: '1.0.0'
-    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.0-alpha2'
+    compile 'org.apache.kafka:kafka-clients:1.0.0'
+    compile 'org.apache.kafka:kafka-streams:1.0.0'
+    compile 'ch.qos.logback:logback-classic:1.2.2'
+    testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
 mainClassName = 'streams.StreamApp'
