--- a/kafka-streams/build.gradle
+++ b/kafka-streams/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     compile 'org.apache.kafka:kafka-clients:1.0.0'
     compile 'org.apache.kafka:kafka-streams:1.0.0'
     compile 'ch.qos.logback:logback-classic:1.2.2'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.4'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
