--- a/kafka-streams/build.gradle
+++ b/kafka-streams/build.gradle
@@ -10,7 +10,9 @@ dependencies {
     compile 'org.apache.kafka:kafka-streams:2.1.0'
     compile 'ch.qos.logback:logback-classic:1.2.2'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.9.4'
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'org.apache.kafka', name: 'kafka-streams-test-utils', version: '2.1.0'
 }
 
 mainClassName = 'streams.StreamApp'
